# django-init

./: .gitignore  README.md  package-lock.json
src/: Dockerfile  pyproject.toml  requirements.txt
src/admin/: admin.py  apps.py
src/app/admin_user/: admin.py  apps.py  cron.py  models.py
src/app/admin_user/migrations/: 0001_initial.py  0002_remove_adminuser_last_login.py  0003_alter_adminuser_email.py
src/app/admin_user/v1/: filters.py  pagination.py  permissions.py  serializers.py  tests.py  urls.py  views.py
src/app/alarmtalk_log/: models.py
src/app/alarmtalk_log/migrations/: 0001_initial.py
src/app/celery_log/migrations/: 0001_initial.py
src/app/chat/migrations/: 0001_initial.py
src/app/common/: authentication.py  messages.py  mixins.py  openapi.py  pagination.py  permissions.py  schedule_client.py  schedule_registry.py  serializers.py  storages.py  views.py  websocket_managers.py
src/app/common/management/app_template/: admin.py-tpl  cron.py-tpl  schedule.py-tpl
src/app/common/management/commands/: add_cron.py  connect_database.py  cron.py  get_jwt.py  jwt.py  log.py  remove_cron.py  ses_production.py  (+2 more)
src/app/device/migrations/: 0001_initial.py  0002_initial.py
src/app/email_log/migrations/: 0001_initial.py
src/app/message/: models.py
src/app/message/migrations/: 0001_initial.py
src/app/message/v1/: urls.py
src/app/presigned_url/: utils.py
src/app/presigned_url/v1/: serializers.py  views.py
src/app/push_log/: models.py
src/app/push_log/migrations/: 0001_initial.py
src/app/sms_log/migrations/: 0001_initial.py
src/app/user/: admin.py  apps.py  models.py  social_adapters.py
src/app/user/migrations/: 0001_initial.py
src/app/user/v1/: serializers.py  urls.py  views.py
src/app/verifier/migrations/: 0001_initial.py
src/app/websocket_connection/: admin.py
src/app/websocket_connection/migrations/: 0001_initial.py
src/app/websocket_connection/v1/: permissions.py  serializers.py  urls.py  views.py
src/app/withdrawal_user/: admin.py  models.py
src/app/withdrawal_user/migrations/: 0001_initial.py
src/config/: exception_handler.py  filter_backends.py  middleware.py  openapi.py  routing.py  schedules.py
src/config/settings/: base.py  dev.py  local.py  prod.py
src/config/urls/: admin.py  api.py
src/templates/admin/: base.html
src/templates/admin/log/: info.html
(+157 files in other folders)
