[project]
name = "#{PROJECT_NAME}"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "boto3>=1.42.10",
    "celery>=5.6.0",
    "django==5.1",
    "django-celery-results>=2.6.0",
    "django-ckeditor-5>=0.2.18",
    "django-cors-headers>=4.9.0",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-hosts>=7.0.0",
    "django-import-export>=4.3.14",
    "django-ordered-model>=3.7.4",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.1",
    "djangorestframework-camel-case>=1.4.2",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "drf-spectacular-sidecar>=2025.12.1",
    "firebase-admin>=7.1.0",
    "gunicorn>=23.0.0",
    "isort>=7.0.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pycurl>=7.45.7",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "watchtower>=3.4.0",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 120

[tool.black]
line_length = 120
