[project]
name = "django-init"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.10",
    "celery>=5.6.0",
    "django==5.1",
    "django-celery-results>=2.6.0",
    "django-ckeditor-5>=0.2.18",
    "django-cors-headers>=4.9.0",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-hosts>=7.0.0",
    "django-import-export>=4.3.14",
    "django-ordered-model>=3.7.4",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.1",
    "djangorestframework-camel-case>=1.4.2",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "drf-spectacular-sidecar>=2025.12.1",
    "firebase-admin>=7.1.0",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pycurl>=7.45.7",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.15.4",
    "watchtower>=3.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
ignore = [
    "F401",
    "E501",
    "F541",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"config/settings/*.py" = ["F403", "F405"]